# supervisor

./: .gitignore  BACKEND_IMPLEMENTATION.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  INTERACTIVE_WORKFLOW.md  copywriter.py  database.db  hello.py  main.py  post_generator_agent.py  pyproject.toml  researcher.py  supervisor.py
backend/core/: config.py  models.py  post_generator.py
backend/db/: database.py
backend/models/: job.py  post.py
backend/routers/: job.py  post.py
backend/schemas/: job.py  post.py
example_content/: blog.md  linkedin.md
prompts/: copywriter.md  post_generator.md  post_generator_agent.md  researcher.md  supervisor.md
