[project]
name = "supervisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.6.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langchain-tavily>=0.2.12",
    "langgraph>=0.6.8",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]
